[package]
name = "marie-ssg"
version = "1.6.0"
edition = "2024"
description = "A fast static site generator that converts markdown with TOML metadata into HTML"
license = "MIT"
repository = "https://github.com/vectorian-rs/marie-ssg"
keywords = ["ssg", "markdown", "rendering"]
categories = ["command-line-utilities", "web-programming"]
exclude = [
    ".beads/",
    ".claude/",
    ".agent-prompts/",
    ".crush/",
    ".venv/",
    "coverage/",
    "docs/",
    "benches/",
    "tests/",
    "AGENTS.md",
    "CLAUDE.md",
    "mise.toml",
    "Cargo.lock",
]

[[bench]]
harness = false
name = "simple_html_benchmark"

[[bench]]
harness = false
name = "unescape_html_benchmark"

[[bench]]
harness = false
name = "toml_benchmark"

[dependencies]
argh = { version = "0" }
autumnus = { version = "0.7", default-features = false, features = [
    "lang-bash",
    "lang-css",
    "lang-html",
    "lang-javascript",
    "lang-json",
    "lang-python",
    "lang-rust",
    "lang-toml",
    "lang-typescript",
    "lang-yaml",
] }
kiters = { version = "0" }
time = { version = "0", features = ["serde", "serde-human-readable", "parsing", "formatting", "macros"] }
markdown = { version = "1" }
minijinja = { version = "2", features = ["loader"] }
minijinja-contrib = { version = "2", features = ["datetime"] }
blake3 = { version = "1" }
rayon = { version = "1" }
serde = { version = "1", features = ["derive"] }
thiserror = { version = "2" }
toml = { version = "0" }
tracing = { version = "0" }
tracing-chrome = { version = "0" }
tracing-flame = { version = "0" }
tracing-subscriber = { version = "0", features = ["env-filter", "time"] }
inferno = { version = "0", default-features = false }
walkdir = { version = "2" }

[dev-dependencies]
assert_cmd = { version = "2" }
basic-toml = { version = "0" }
criterion = { version = "0", features = ["html_reports"] }
html-escape = { version = "0" }
predicates = { version = "3" }
scraper = { version = "0" }
tempfile = { version = "3" }

[target.'cfg(target_os = "macos")'.dependencies]
fsevent = { version = "2" }

[profile.bench]
lto = "thin"
codegen-units = 8

[profile.dev]
lto = "thin"
codegen-units = 8

[profile.release]
opt-level = "s"  # reduces binary size
debug = "full"  # No one needs an undebuggable release binary
split-debuginfo = "packed"  # generates a separate *.dwp/*.dSYM so the binary can get stripped
strip = "symbols"  # See split-debuginfo - reduces binary size
lto = true  # reduces binary size
panic = "abort"  # reduces binary size
incremental = true  # Improves re-compile times
codegen-units = 1  # reduces binary size

[profile.profiling]
inherits = "release"  # Use all the optimization settings from the release profile
debug = true  # Include debug info so 'perf' can find function names
split-debuginfo = "off"  # Keep debug info in the binary
strip = false  # Do NOT strip symbols
